# brdtheo-api

./: .gitignore  Dockerfile  README.md  entrypoint.prod.sh  input.css  pyproject.toml  readme  requirements.txt  schema.yml
.github/workflows/: lint.yml  mypy.yml  tests.yml
blog/: admin.py  enums.py  markdown_extensions.py  models.py  serializers.py  tests.py  views.py
blog/migrations/: 0015_post_is_published_alter_postcategory_name.py  0016_alter_post_slug.py  0017_alter_post_thumbnail_alter_postcategory_name_and_more.py
blog/templates/: category.html  index.html  post-card.html  post-header.html  post.html
brdtheo/: feeds.py  settings.py  sitemaps.py  tests.py  urls.py  utils.py  views.py
brdtheo/static/: site.webmanifest
brdtheo/static/css/: 98.css  xp.css
brdtheo/templates/: robots.txt
brdtheo/templates/brdtheo/: base.html  index.html
brdtheo/templates/brdtheo/sections/: countrydex.html  favourite-stack.html  fun-fact.html  hire-me.html  pinned-media.html  summary.html  trophy.html  zen.html
