[project]
name = "brdtheo-api"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "binaryornot==0.4.4",
    "certifi==2025.1.31",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cookiecutter==2.6.0",
    "cssbeautifier==1.15.4",
    "django==5.2.7",
    "django-extensions>=4.1",
    "django-meta==2.5.0",
    "django-stubs==5.1.3",
    "django-stubs-ext==5.1.3",
    "djangorestframework>=3.16.1",
    "djangorestframework-stubs[compatible-mypy]>=3.15.3",
    "djlint>=1.36.4",
    "editorconfig==0.17.0",
    "gunicorn==23.0.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "jsbeautifier==1.15.4",
    "json5==0.12.0",
    "markdown==3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pluggy==1.5.0",
    "psycopg==3.2.6",
    "psycopg-binary==3.2.6",
    "psycopg2-binary==2.9.10",
    "pygments==2.19.1",
    "pytest==8.3.5",
    "pytest-django==4.11.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-slugify==8.0.4",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==14.0.0",
    "ruff==0.11.8",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "text-unidecode==1.3",
    "tqdm==4.67.1",
    "types-markdown==3.8.0.20250415",
    "types-python-dateutil==2.9.0.20241206",
    "types-pyyaml==6.0.12.20250402",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "whitenoise==6.9.0",
]

[tool.pyright]
    typeCheckingMode = "strict" # "off", "basic", "standard", "strict"
    reportUnknownArgumentType = false # silent for Django models
    reportUnknownVariableType = false # silent for Django models
    reportUnknownMemberType = false # silent for Django models
    reportMissingTypeArgument = false # silent for Django admin

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "brdtheo.settings"
python_files = ["tests.py"]
addopts = "--reuse-db --create-db"
